# WackUtils

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/WackUtils/: ciphers.h  common.h  encryption.h  hashing.h  networking.h  process.h  random.h  window.h
include/WackUtils/wss/: wss.h
src/: ciphers.cpp  encryption.cpp  process.cpp  random.cpp  window.cpp
src/wss/: wss.cpp
tests/tests/: encryption.cpp  process.cpp  window.cpp
tests/util/: shared.cpp  shared.h
